# LumaBridge

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  pages.yml
crates/lumabridge_wasm/: Cargo.toml
crates/lumabridge_wasm/src/: lib.rs
crates/tonebridge_wasm/: Cargo.toml
crates/tonebridge_wasm/src/: lib.rs
docs/: current-stage-status.md
scripts/: build-wasm.mjs  generate-fixtures.mjs
src/: main.ts  vite-env.d.ts
src/core/: benchmark.ts  capabilities.ts  codec.ts  color.ts  decoder-adapter.ts  errors.ts  gpu-upload.ts  hevc-config.ts  hevc.ts  matroska.ts  media-source.ts  metadata.ts  mp4.ts  raw-frame.ts  reference-compare.ts  rpu-alignment.ts  rpu-metadata.ts  video-frame-layout.ts  webcodecs.ts  webgpu-external-preview.ts  webgpu-render.ts
src/gpu/: dv-p5-to-sdr.wgsl  external-video-to-sdr.wgsl
src/styles/: app.css
tests/: README.md
tests/e2e/: app.spec.ts  fixtures.spec.ts
tests/fixtures/: dv_p5_short.mkv  dv_p5_single_frame.mkv
tests/references/: dv_p5_short.ffprobe.json  rpu_reference.json
tests/unit/: benchmark.test.ts  capabilities.test.ts  codec.test.ts  color.test.ts  decoder-adapter.test.ts  fixtures.test.ts  gpu-upload.test.ts  hevc.test.ts  matroska.test.ts  media-source.test.ts  metadata.test.ts  mp4.test.ts  raw-frame.test.ts  reference-compare.test.ts  rpu-alignment.test.ts  rpu-metadata.test.ts  video-frame-layout.test.ts  webcodecs.test.ts  wgsl.test.ts
(+6 files in other folders)
