[package]
name = "lumabridge_wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = []
wasm = ["wasm-bindgen"]
